--- a/alcs-frontend/src/styles/toast.scss
+++ b/alcs-frontend/src/styles/toast.scss
@@ -1,46 +1,50 @@
 @import './colors';
 
-snack-bar-container {
+.mat-mdc-snack-bar-container {
   padding: 0 !important;
 
-  .mat-simple-snackbar {
+  .mat-mdc-simple-snackbar {
     align-items: stretch;
   }
 
-  .mat-simple-snack-bar-content {
+  .mdc-snackbar__label {
     padding: 14px;
     text-align: center;
   }
 
-  .mat-simple-snackbar-action {
+  .mat-mdc-snack-bar-actions {
     border-left: 1px solid #fff;
-    color: #fff;
     padding: 0;
     margin: 0;
 
-    .mat-button-wrapper {
+    .mdc-button__label {
       letter-spacing: normal;
       font-weight: bold;
+      color: #fff;
     }
+  }
+
+  .mdc-snackbar__surface {
+    padding-right: 0;
   }
 }
 
-.mat-simple-snackbar-action button {
+.mat-mdc-snackbar-action button {
   height: 100% !important;
   max-height: unset !important;
 }
 
-snack-bar-container.success {
+.mat-mdc-snack-bar-container.success .mdc-snackbar__surface {
   background: $success-color;
   color: #fff;
 }
 
-snack-bar-container.warning {
+.mat-mdc-snack-bar-container.warning .mdc-snackbar__surface {
   background: $warning-color;
   color: #fff;
 }
 
-snack-bar-container.error {
+.mat-mdc-snack-bar-container.error .mdc-snackbar__surface {
   background: $error-color;
   color: #fff;
 }
