Prevent subtask status from wrapping

--- a/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
+++ b/alcs-frontend/src/app/features/board/subtasks/subtasks.component.scss
@@ -41,6 +41,7 @@
 .status {
   text-transform: uppercase;
   font-size: 12px !important;
+  white-space: nowrap;
 
   .mat-icon {
     margin-right: 4px;
