--- a/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
+++ b/portal-frontend/src/app/features/edit-application/land-use/land-use.component.html
@@ -1,18 +1,18 @@
 <section>
-  <h2>Land Use</h2>
-  <div>
+  <div class="step-description">
+    <h2>Land Use</h2>
     <p>Describe the current land use of parcel(s) under application and adjacent parcels.</p>
-    <app-warning-banner>
-      Please consult the
-      <a
-        href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
-        target="_blank"
-        >'What the Commission Considers'</a
-      >
-      page of the ALC website for more information.
-    </app-warning-banner>
+    <p>All fields are required unless stated optional.</p>
   </div>
-
+  <app-warning-banner>
+    Please consult the
+    <a
+      href="https://www.alc.gov.bc.ca/application-and-notice-process/applications/what-the-commission-considers/"
+      target="_blank"
+      >'What the Commission Considers'</a
+    >
+    page of the ALC website for more information.
+  </app-warning-banner>
   <form [formGroup]="landUseForm" class="land-use-form">
     <h5>Land Use of Parcel(s) under Application</h5>
     <div class="form-row">
