--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -1,9 +1,12 @@
 <section title="Other parcels">
-  <h2>Other Parcels in the Community</h2>
-  <p>
-    Identify all ownerships or leases of other lands (ALR or non-ALR) within the community where the parcel(s) under
-    application are located.
-  </p>
+  <div class="step-description">
+    <h2>Other Parcels in the Community</h2>
+    <p>
+      Identify all ownerships or leases of other lands (ALR or non-ALR) within the community where the parcel(s) under
+      application are located.
+    </p>
+    <p>All fields are required unless stated optional.</p>
+  </div>
   <form>
     <mat-expansion-panel *ngFor="let owner of owners; let ownerInd = index" [expanded]="false">
       <mat-expansion-panel-header>
