--- a/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/edit-application/primary-contact/primary-contact.component.html
@@ -1,6 +1,9 @@
-<h2>Primary Contact</h2>
-<section>
+<div class="step-description">
+  <h2>Primary Contact</h2>
   <p>Select from the listed parcel owners or identify a third party agent</p>
+  <p>All fields are required unless stated optional.</p>
+</div>
+<section>
   <div class="contacts">
     <ng-container *ngFor="let owner of nonAgentOwners">
       <h5>{{ owner.displayName }}</h5>
