--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -2,6 +2,7 @@
   <div class="step-description">
     <h3>Identify Parcels Under Application</h3>
     <p>Provide parcel identification and registered ownership information for each parcel under application.</p>
+    <p>All fields are required unless stated optional.</p>
   </div>
   <mat-expansion-panel
     *ngFor="let parcel of parcels; let parcelInd = index"
