--- a/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-application/select-government/select-government.component.html
@@ -1,8 +1,11 @@
-<h2>Government</h2>
-<p>
-  Please indicate the local government in which the parcel(s) under application is located. If the property is located
-  within the Islands Trust, please select 'Islands Trust' and not a specific island.
-</p>
+<div class="step-description">
+  <h2>Government</h2>
+  <p>
+    Please indicate the local government in which the parcel(s) under application is located. If the property is located
+    within the Islands Trust, please select 'Islands Trust' and not a specific island.
+  </p>
+  <p>All fields are required unless stated optional.</p>
+</div>
 <form [formGroup]="form">
   <div class="form-row">
     <div class="full-row">
