Load owners when loading primary contact page
* Load owners directly from service when loading primary contact page
* Fix CSS

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -129,7 +129,7 @@
     background-color: $primary-color-light;
   }
 
-  .review-application {
+  .edit-application {
     .description {
       margin-top: rem(12);
       margin-bottom: rem(20);
@@ -276,7 +276,7 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
   }
-  
+
   .flex-space-between-wrap {
     display: flex;
     justify-content: space-between;
