wip: show existing other parcels

--- a/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
+++ b/portal-frontend/src/app/features/edit-application/other-parcels/other-parcels.component.html
@@ -9,6 +9,73 @@
     <ul *ngFor="let owner of owners">
       <li>{{ owner.displayName }}</li>
     </ul>
+
+    <form [formGroup]="otherParcelsForm">
+      <!-- <div class="type">
+        <h6>Select ownership type:</h6>
+        <div class="warning">
+          The answer to the following question will change the rest of the application form. Do not change this answer once
+          selected.
+        </div>
+        <mat-button-toggle-group
+          class="input"
+          (change)="onChangeParcelType($event)"
+          id="parcelType"
+          formControlName="parcelType"
+        >
+          <mat-button-toggle value="SMPL">Fee Simple</mat-button-toggle>
+          <mat-button-toggle value="CRWN">Crown</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div> -->
+
+      <div class="full-row">
+        <div>
+          <div for="isOwnOtherParcels">
+            Does any of the parcel owners hold an interest (ownership or lease) in any other land (ALR or non-ALR)
+            within the <b>community</b> where the application parcel(s) is located?
+          </div>
+          <mat-button-toggle-group class="input" id="isOwnOtherParcels" formControlName="isOwnOtherParcels">
+            <mat-button-toggle value="true">Yes</mat-button-toggle>
+            <mat-button-toggle value="false">No</mat-button-toggle>
+          </mat-button-toggle-group>
+        </div>
+      </div>
+
+      <div class="full-row">
+        <mat-expansion-panel *ngFor="let parcel of otherParcels; let parcelInd = index" [expanded]="false">
+          <mat-expansion-panel-header>
+            <mat-panel-title> Parcel #{{ parcelInd + 1 }} Details</mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-parcel-entry
+            [parcel]="parcel"
+            [$owners]="$owners"
+            [fileId]="fileId"
+            [enableOwners]="true"
+            [enableCertificateOfTitleUpload]="false"
+            [enableUserSignOff]="false"
+            (onFormGroupChange)="onParcelFormChange($event)"
+          ></app-parcel-entry>
+          <div>
+            <div class="flex-evenly-wrap parcel-buttons-wrappers">
+              <button class="margin-top-1-half" mat-stroked-button color="primary" (click)="onSave()">
+                Save Parcel #{{ parcelInd + 1 }} Details
+              </button>
+              <button
+                class="margin-top-1-half"
+                mat-stroked-button
+                color="accent"
+                (click)="onDelete(parcel.uuid, parcelInd + 1)"
+              >
+                Delete Parcel #{{ parcelInd + 1 }} Details
+              </button>
+            </div>
+          </div>
+        </mat-expansion-panel>
+        <div>
+          <button mat-stroked-button color="primary" (click)="onAddParcel()">Add another parcel</button>
+        </div>
+      </div>
+    </form>
   </div>
   <!-- <form>
     <mat-expansion-panel *ngFor="let owner of owners; let ownerInd = index" [expanded]="false">
